<resources>
    <string name="app_name">ExpenseManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="amount">Enter the Amount </string>
    <string name="category">Enter the Category</string>
    <string name="description">Enter the Description</string>
    <string name="expense">Add Expense </string>
    <string name="enter_the_amount">Enter the Amount</string>
    <string name="edit_fab">edit_fab</string>
</resources>