<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="13dp"
        tools:context=".fragments.AddExpenseFragment">

        <TextView
            android:id="@+id/addExpenseHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/expense"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/addExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/amount"
            android:textStyle="bold"
            android:padding="12dp"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            android:layout_below="@id/addExpenseHeading"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/addExpenseCategory"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/category"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@+id/addExpenseAmount"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/addExpenseDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/addExpenseCategory"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:hint="@string/description"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:padding="12dp"
            android:textSize="20sp" />

    </RelativeLayout>
</layout>